[tool.poetry]
name = "recipe_grid"
version = "2.0.1"
description = "A tool for generating table-based recipe descriptions."
authors = ["Jonathan Heathcote"]
homepage = "https://github.com/mossblaser/recipe_grid"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.6.1"
marko = "^0.9.1"
peggie = "^0.2.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.790"
pre-commit = "^2.8.2"
sphinx = "^3.3.0"
numpydoc = "^1.1.0"

[tool.poetry.scripts]
recipe-grid = "recipe_grid.scripts.recipe_grid:main"
recipe-grid-lint = "recipe_grid.scripts.recipe_grid_lint:main"
recipe-grid-site = "recipe_grid.scripts.recipe_grid_site:main"

[tool.black]
target-version = ['py37']
